
0.24
      - Fixed broken link in App::Info::Request documentation.
      - Added PostgreSQL environment variables to the paths to search
        for pg_config in App::Info::RDBMS::PostgreSQL. Patch from
        Greg Sabino Mullane.
      - Added handling of PostgreSQL beta version numbers to
        App::Info::RDBMS::PostgreSQL. Patch from Greg Sabino Mullane.

0.23  Thu Aug  8 19:32:42 2002
      - Fixed tests that check Apache info events so that they're more
        flexible about the name of the Apache executable. Thanks to Dave
        Rolsky for the spot.
      - Fixed "NAME" section in App::Info::Request so that it has the right
        name and therefore renders properly on search.cpan.org.
      - Updated or added "BUGS" section of documentation in all modules to
        point to the CPAN Request Tracker.

0.22  Wed Jul  3 17:31:53 2002
      - Fixed tests that use Handler::Prompt so that they fake it into
        always thinking there's a TTY.

0.21  Tue Jul  2 19:14:44 2002
      - Fixed bug in Handler::Prompt where the prompt failed to simply
        return when the user accepted the default value (with confirm
        events).
      - Changed email address in AUTHOR section so that it's a link.
      - Added tests for confirm events.

0.20  Thu Jun 27 20:28:34 2002
      - Major upgrade. Some backwards compatibility broken. Namely, the
        error parameter no longer exists. See event handling instead.
      - Added App::Info::Handler. Classes derived from this class handle
        events triggered by App::Info subclasses.      
      - Added event handling methods to App::Info base class. The methods
        are on_info(), on_error(), on_unknown(), and on_confirm(). They
        have constructor parameters, too, of the same names. Pass in a
        list of event handlers to any one of these methods to handle
        events of that type.
      - Added example event handling classes. They are