@@ -1,0 +1,12 @@
+use Module::Build;
+
+my $build = Module::Build->new
+  ( module_name    => 'App::Info',
+    license        => 'perl',
+    requires       => { File::Spec    => 0,
+                      },
+    build_requires => { Test::Simple  => '0.17',
+                      },
+    create_makefile_pl => 'passthrough',
+  );
+$build->create_build_script;
