@@ -1,5 +1,7 @@
+Build.PL
 Changes
 MANIFEST			This list of files
+META.yml
 Makefile.PL
 README
 lib/App/Info.pm
